--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@
 
 language: R
 cache: packages
+
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:cran/imagemagick'
+    packages:
+    - libmagick++-dev
+    - libglu1-mesa-dev
